--- a/marketTrio/src/main/resources/templates/thyme/SecondHand/secondHandEdit.html
+++ b/marketTrio/src/main/resources/templates/thyme/SecondHand/secondHandEdit.html
@@ -112,7 +112,7 @@ body {
 
 	<div class="content">
 		<div class="breadcrumb">
-			<a href="#">중고거래</a> &gt; 게시글 작성
+			<a href="#">중고거래</a> &gt; 게시글 수정
 		</div>
 		<form class="form"
 			th:action="@{/shPost/update/{SHPostId}(SHPostId= ${shPost.SHPostId})}"
