--- a/marketTrio/src/main/resources/templates/thyme/SecondHand/SHBuyerDetail.html
+++ b/marketTrio/src/main/resources/templates/thyme/SecondHand/SHBuyerDetail.html
@@ -187,7 +187,7 @@ main {
 		<section class="product">
 			<h1 th:text="${shPost.title}">제목</h1>
 			<div class="seller-info">
-				<img th:src="@{/images/profile.png}" alt="판매자 사진"
+				<img th:src="@{'/upload/' + ${shPost.member.profilePicture}}" alt="프로필사진"
 					class="seller-photo">
 				<div class="seller-details">
 					<span class="seller-name" th:text="${shPost.member.nickname}">닉네임</span>
