--- a/marketTrio/src/main/resources/templates/thyme/groupBuy/gbBuyerDetail.html
+++ b/marketTrio/src/main/resources/templates/thyme/groupBuy/gbBuyerDetail.html
@@ -138,9 +138,9 @@
         <div class="container">
             <div class="title" th:text="${gbPost.productName}">상품 이름</div>
             <div class="profile">
-                <img src="./profile.png" alt="Profile Image">
+               <img th:src="@{'/upload/' + ${gbPost.member.profilePicture}}" alt="프로필사진" class="seller-photo">
                 <div>
-                    <div th:text="${gbPost.member.getNickname()}">판매자명</div>
+                    <div th:text="${gbPost.member.nickname}">판매자명</div>
                     <div th:text="${#dates.format(gbPost.createDate, 'yyyy/MM/dd')}">작성 날짜</div>
                 </div>
             </div>
@@ -163,6 +163,12 @@
                 <div id="btndiv"><a th:href="@{/groupBuy/participateCancel/{GBPostId}(GBPostId=${GBPostId})}" class="register-btn">참여 취소하기</a></div>
                 <div class="deadline"><span>마감일 : </span><span th:text="${#dates.format(gbPost.duration, 'yy/MM/dd')}"></span></div>
                 <div class="description" th:text="${gbPost.content}"></div>
+                <div style="font-weight: bold;font-size: 20px;margin-top: 20px;margin-bottom: 20px;border-bottom: 1px solid; padding-bottom: 10px;">공동구매 참여자 목록</div>
+                <div th:each="part: ${gbpList}" style="margin-bottom: 10px; padding-bottom: 10px; border-bottom: 1px dotted #808080;">
+                   <span th:text="${part.member.nickname}" style="font-weight:bold;"></span>
+                   <span th:text="' : 선택한 옵션 : ' + ${part.myOption.optionName}"></span>
+                   <span th:text="', 선택 옵션 수량  : ' + ${part.myQuantity}"></span>
+                </div>
             </div>
         </div>
     </div>
