--- a/marketTrio/src/main/resources/templates/thyme/groupBuy/groupBuyCorrection.html
+++ b/marketTrio/src/main/resources/templates/thyme/groupBuy/groupBuyCorrection.html
@@ -133,6 +133,7 @@
                <label for="product-title">상품명</label>
                <input type="text" id="product-title" th:field="*{productName}" >
            </div>
+           <div th:if="${MinusDate}" style="color: red; margin-top: 30px; font-size: 12px;" class="error-message" th:text="${MinusDate}"></div>               
            <div class="form-group">
                <label for="sale-period">마감 기한</label>
                <input type="date" id="sale-period" th:field="*{duration}">
