--- a/marketTrio/src/main/resources/templates/thyme/groupBuy/groupBuyWrite.html
+++ b/marketTrio/src/main/resources/templates/thyme/groupBuy/groupBuyWrite.html
@@ -154,39 +154,39 @@
                     <input type="file" id="files" name="files" multiple style="width: 500px; padding: 11px;">
                 </div>
                 <div style="margin-left:123px;">
-                    <label for="product-title" style="margin-top: 21px;">상품명</label>
-                    <input type="text" id="product-title" th:field="*{productName}" placeholder="상품명을 작성하세요." style="margin-bottom: 17px;">
+                   <label for="product-title" style="margin-top: 21px;">상품명</label>
+                    <input type="text" id="product-title" th:field="*{productName}" placeholder="상품명을 작성하세요." style="margin-bottom: 17px;" required>
                 </div>
             </div>
+            <div th:if="${Minus}" style="color: red; padding-bottom:20px; font-size: 12px;" class="error-message" th:text="${Minus}"></div>                                                  
             <div class="custom">
-                <div class="form-group">
+               <div class="form-group">
                     <label for="original-price">정가</label>
-                    <input type="number" id="original-price" th:field="*{regularPrice}" placeholder="정가를 작성하세요." style="width:500px;">
+                    <input type="number" id="original-price" th:field="*{regularPrice}" placeholder="정가를 작성하세요." style="width:500px;" required>
                 </div>
                 <div class="form-group">
                     <label for="discount-rate">할인율</label>
-                    <input type="number" id="discount-rate" th:field="*{discountRate}" placeholder="%할인율">
+                    <input type="number" id="discount-rate" th:field="*{discountRate}" placeholder="%할인율" required>
                 </div>
                 <div class="form-group">
                      <label for="product-quantity">총 수량</label>
-                     <input type="number" id="product-quantity" th:field="*{allQuantity}" placeholder="전체 수량을 작성하세요.">
+                     <input type="number" id="product-quantity" th:field="*{allQuantity}" placeholder="전체 수량을 작성하세요." required>
                 </div>
             </div>
             <div class="custom">
                 <div class="form-group">
-                   <label for="sale-period">마감기한</label>
-                   <input type="date" id="sale-period" th:field="*{duration}" placeholder="마감 기간을 작성하세요." style="width:500px;">
+                   <div th:if="${MinusDate}" style="color: red; padding-bottom:10px; font-size: 12px;" class="error-message" th:text="${MinusDate}"></div>
+               <label for="sale-period">마감기한</label>
+                   <input type="date" id="sale-period" th:field="*{duration}" placeholder="마감 기간을 작성하세요." style="width:500px;" required>
                  </div>
-                <div style="margin-right: 64px;">
-                    
-                </div>
+                <div th:if="${MinusOption}" style="margin-top: 45px; color: red; padding-bottom:10px; font-size: 12px; width: 221px;" class="error-message" th:text="${MinusOption}"></div>       
                 <button id="optionAdd" type="button">옵션 추가</button>
             </div>  
             <div class="custom">
                 <div class="form-group">
-                    <label for="product-description">상세설명</label>
-                    <textarea id="product-description" th:field="*{content}" rows="10" placeholder="내용을 작성하세요." style="width:500px;"></textarea>
-                </div>
+                   <label for="product-description">상세설명</label>
+                    <textarea id="product-description" th:field="*{content}" rows="10" placeholder="내용을 작성하세요." style="width:500px;" required></textarea>
+                </div>                                        
                 <div id="options-container"></div> <!-- 추가된 옵션들을 표시할 컨테이너 -->
             </div>                              
             <button type="submit" class="submit-btn">작성 완료</button>
