--- a/marketTrio/src/main/resources/templates/thyme/myPage/myPurchaseList.html
+++ b/marketTrio/src/main/resources/templates/thyme/myPage/myPurchaseList.html
@@ -156,6 +156,18 @@ body {
 	padding-left: 20px;
 }
 
+.card-content2 .date {
+	color: #999;
+}
+
+.card-content2 .sold {
+	background-color: #ccc;
+	padding: 5px 10px;
+	border-radius: 5px;
+	color: white;
+	font-weight: bold;
+}
+
 .card-content span {
 	display: block;
 	padding-bottom: 5px;
@@ -222,6 +234,11 @@ body {
 	gap: 10px;
 }
 
+.product-details {
+	display: flex;
+	flex-direction: column;
+}
+
 .product-info img {
 	width: 50px;
 	height: 50px;
@@ -280,23 +297,34 @@ body {
 			<!-- 경매 섹션 -->
 			<div class="section">
 				<h2>경매</h2>
-				<!-- <a th:href="@{'/auction/' + ${auction.auctionPostId} + '/detail'}" class="item"> -->
-				<div class="card" th:each="item : ${APurchaseList}">
-					<!-- <img th:src="@{'/upload/' + ${auction.pictures[0]}}" alt="상품 이미지"> -->
-					<div class="card-content">
-						<span class="title" th:text="${item.name}">제품명</span> <span
-							class="price"
-							th:text="${#numbers.formatDecimal(item.maxPrice, 0, 'COMMA', 0, 'NONE')} + '원'">현재최고입찰가</span>
-					</div>
-					<div class="card-content2">
-						<div class="card-date"
-							th:text="${#dates.format(item.createDate, 'yyyy/MM/dd')}">2024.04.12</div>
-						<div th:text="${#dates.format(item.deadline, 'yyyy/MM/dd')}"></div>
-						<div th:if="${item.auctionStatus == 1}">판매 완료</div>
-					</div>
+
+				<div class="product-list" th:each="item : ${APurchaseList}">
+					<a style="text-decoration: none;"
+						th:href="@{'/auction/' + ${item.auctionPostId} + '/detail'}"
+						class="item">
+						<div class="product-item">
+							<div class="product-info">
+								<img th:src="@{'/upload/' + ${item.pictures[0]}}" alt="상품 이미지">
+								<div class="product-details">
+									<div class="title" th:text="${item.name}">제품명</div>
+									<div class="price"
+										th:text="${#numbers.formatDecimal(item.maxPrice, 0, 'COMMA', 0, 'NONE')} + '원'">현재최고입찰가</div>
+								</div>
+							</div>
+
+							<div class="card-content2">
+								<!-- <div class="card-date"
+									th:text="${#dates.format(item.createDate, 'yyyy/MM/dd')}">2024.04.12</div> -->
+								<div class="date"
+									th:text="${#dates.format(item.deadline, 'yyyy/MM/dd')}"></div>
+								<div class="sold" th:if="${item.auctionStatus == 1}">경매 완료</div>
+							</div>
+						</div>
+					</a>
 				</div>
-				<!-- </a> -->
 			</div>
+
+
 
 			<!-- 공동구매 섹션 -->
 			<div class="section">
