--- a/marketTrio/src/main/resources/templates/thyme/myPage/mySalesList.html
+++ b/marketTrio/src/main/resources/templates/thyme/myPage/mySalesList.html
@@ -171,6 +171,17 @@ body {
 	padding-right: 10px;
 }
 
+.card-content2 {
+    flex: 1;
+    text-align: right;
+    padding-right: 10px;
+}
+
+.card-content2 .date,
+.card-content2 .sold {
+    display: block;
+    padding-bottom: 5px;
+}
 .card-content2 span {
 	display: block;
 	padding-bottom: 5px;
@@ -222,6 +233,11 @@ body {
 	gap: 10px;
 }
 
+.product-details {
+	display: flex;
+	flex-direction: column;
+}
+
 .product-info img {
 	width: 50px;
 	height: 50px;
@@ -250,60 +266,68 @@ body {
 				<h2>중고거래</h2>
 
 				<div class="product-list" th:each="item : ${SHSalesList}">
-	<div class="product-item">
-		<div class="product-info">
-			<div th:if="${not #lists.isEmpty(item.image)}">
-				<img th:src="@{'/upload/' + ${item.image[0]}}" alt="상품 이미지">
-			</div>
-		</div>
+					<div class="product-item">
+						<div class="product-info">
+							<div th:if="${not #lists.isEmpty(item.image)}">
+								<img th:src="@{'/upload/' + ${item.image[0]}}" alt="상품 이미지">
+							</div>
+						</div>
 
-		<div class="card-content">
-			<a style="text-decoration: none;" th:href="@{/shPost/detail/{SHPostId}(SHPostId=${item.SHPostId})}">
-				<span class="title" th:text="${item.title}">제품명</span>
-			</a>
-			<span class="price" th:text="${#numbers.formatDecimal(item.price, 0, 'COMMA', 0, 'NONE')} + '원'">123,456</span>
-		</div>
-		<div class="card-content2">
-			<div class="card-date" th:text="${#dates.format(item.createDate, 'yyyy/MM/dd')}">2024.04.12</div>
-			<button type="button" th:if="${item.shStatus == 1}"
-				th:attr="disabled=${item.reviewStatus == 1}"
-				th:onclick="loadReviewForm([[${item.SHPostId}]], [[${item.buyerId}]], [[${item.sellerId}]])"
-				style="width: 100px; height: 30px; color: white; border: none; border-radius: 5px; background-color: #AED581;">
-				<span th:text="${item.reviewStatus == 1 ? '후기작성완료' : '후기작성하기'}"></span>
-			</button>
-		</div>
-	</div>
-</div>
+						<div class="card-content">
+							<a style="text-decoration: none;"
+								th:href="@{/shPost/detail/{SHPostId}(SHPostId=${item.SHPostId})}">
+								<span class="title" th:text="${item.title}">제품명</span>
+							</a> <span class="price"
+								th:text="${#numbers.formatDecimal(item.price, 0, 'COMMA', 0, 'NONE')} + '원'">123,456</span>
+						</div>
+						<div class="card-content2">
+							<div class="card-date"
+								th:text="${#dates.format(item.createDate, 'yyyy/MM/dd')}">2024.04.12</div>
+							<button type="button" th:if="${item.shStatus == 1}"
+								th:attr="disabled=${item.reviewStatus == 1}"
+								th:onclick="loadReviewForm([[${item.SHPostId}]], [[${item.buyerId}]], [[${item.sellerId}]])"
+								style="width: 100px; height: 30px; color: white; border: none; border-radius: 5px; background-color: #AED581;">
+								<span th:text="${item.reviewStatus == 1 ? '후기작성완료' : '후기작성하기'}"></span>
+							</button>
+						</div>
+					</div>
+				</div>
 
 
 			</div>
 
 			<!-- 경매 섹션 -->
-			<div class="section">
-				<h2>경매</h2>
-				<!-- <a th:href="@{'/auction/' + ${auction.auctionPostId} + '/detail'}" class="item"> -->
-				<div class="card" th:each="item : ${ASalesList}">
-					<!-- <img th:src="@{'/upload/' + ${auction.pictures[0]}}" alt="상품 이미지"> -->
-					<div class="card-content">
-						<span class="title" th:text="${item.name}">제품명</span> <span
-							class="price"
-							th:text="${#numbers.formatDecimal(item.maxPrice, 0, 'COMMA', 0, 'NONE')} + '원'">현재최고입찰가</span>
-					</div>
-					<div class="card-content2">
-						<div class="card-date"
-							th:text="${#dates.format(item.createDate, 'yyyy/MM/dd')}">2024.04.12</div>
-						<div th:text="${#dates.format(item.deadline, 'yyyy/MM/dd')}"></div>
-						<div th:if="${item.auctionStatus == 1}">판매 완료</div>
+			<!-- 경매 섹션 -->
+<div class="section">
+	<h2>경매</h2>
+
+	<div class="product-list" th:each="item : ${ASalesList}">
+		<a style="text-decoration: none;" th:href="@{'/auction/' + ${item.auctionPostId} + '/detail'}" class="item">
+			<div class="product-item">
+				<div class="product-info">
+					<img th:src="@{'/upload/' + ${item.pictures[0]}}" alt="상품 이미지">
+					<div class="product-details">
+						<div class="title" th:text="${item.name}">제품명</div>
+						<div class="price" th:text="${#numbers.formatDecimal(item.maxPrice, 0, 'COMMA', 0, 'NONE')} + '원'">현재최고입찰가</div>
 					</div>
 				</div>
-				<!-- </a> -->
+
+				<div class="card-content2">
+					<div>
+						<span class="date" th:text="${#dates.format(item.deadline, 'yyyy/MM/dd')}"></span>
+						<span class="sold" th:if="${item.auctionStatus == 1}">경매 완료</span>
+					</div>
+				</div>
 			</div>
+		</a>
+	</div>
+</div>
 
 			<!-- 공동구매 섹션 -->
 			<div class="section">
 				<h2>공동구매</h2>
 				<div class="product-list" th:each="gbPost:${GBSalesList}">
-					<a  style="text-decoration: none;"
+					<a style="text-decoration: none;"
 						th:href="@{'/groupBuy/detail/' + ${gbPost.GBPostId}}">
 						<div class="product-item" th:attr="data-status=${gbPost.GBStatus}">
 							<div class="product-info">
